<resources>
    <string name="title_activity_bus_tutorial">BusTutorial</string>
    <string name="title_activity_ovchip_kaart_tutorial">OVChipKaartTutorialActivity</string>
    <string name="title_activity_main">StepByStep</string>
    <string name="title_activity_travelbytrain">Reizen met de trein</string>
    <string name="title_activity_travelbybus">Reizen met de bus</string>
    <string name="title_activity_trein_tutorial">TreinTutorialActivity</string>
    <string name="title_activity_application_explanation">ApplicationExplanation</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_busStops">BusStops</string>
    <string name="title_activity_bus_arrivals">Bus tijden</string>
    <string name="title_activity_map">map</string>
    <string name="app_name">StepByStep</string>
    <string name="action_settings">Settings</string>
    <string name="button_settings">Instellingen</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Annuleren</string>
    <string name="button_ja">Ja</string>
    <string name="no_internet_title">Internet</string>
    <string name="no_internet_text">Geen internet connectie</string>
    <string name="no_busstops_title">Bushaltes</string>
    <string name="no_busstops_text">Geen bushaltes gevonden</string>
    <string name="no_gps_title">GPS instellingen</string>
    <string name="no_gps_text">U heeft geen GPS verbinding wilt u deze aanzetten?</string>
    <string name="title_activity_main_menu">StepByStep</string>
    <string name="menutitle1">Reizen met het</string>
    <string name="menutitle2">Openbaar Vervoer</string>
    <string name="menu_text1">Reizen met de bus</string>
    <string name="menu_text2">Reizen met de trein</string>
    <string name="menu_text3">OV&#8211;chipkaart info</string>
    <string name="menu_text4">Bushaltes</string>
    <string name="menu_text5">Applicatie uitleg</string>
    <string name="ov_chipkaart_1_title">1. De OV&#8211;chipkaart</string>
    <string name="ov_chipkaart_1_subtitle_1">Persoonlijke of anonieme OV&#8211;chipkaart</string>
    <string name="ov_chipkaart_1_text_1">Met de OV&#8211;chipkaart kunt u in heel Nederland reizen met de bus, de trein, de tram en de metro. U moet zelf een OV&#8211;chipkaart aanschaffen en er ‘saldo’ opzetten. Zodra de kaart is opgeladen met een geldbedrag, kunt u ermee reizen. Een OV&#8211;chipkaart kost 7,50 en is vijfjaar geldig. U kunt zelf bepalen hoeveel geld u op de kaart zet. ledere keer als u een reis maakt met de OV&#8211;chipkaart, wordt er geld van de kaart afgeschreven.</string>
    <string name="ov_chipkaart_1_text_2">U kunt kiezen tussen een persoonlijke OV&#8211;chipkaart en een anonieme OV&#8211;chipkaart. Op de persoonlijke kaart staat uw naam en uw gegevens zijn eraan gekoppeld. U bent de enige die van deze kaart mag gebruiken. De anonieme kaart heeft geen persoonlijke gegevens en kan 00k door een andere persoon gebruikt worden. Elke reiziger heeft een eigen OV&#8211;chipkaart nodig.</string>
    <string name="ov_chipkaart_2_title">2. OV&#8211;chipkaart kopen</string>
    <string name="ov_chipkaart_2_subtitle_1">Persoonlijke OV&#8211;chipkaart kopen</string>
    <string name="ov_chipkaart_2_subtitle_2">Anonieme OV&#8211;chipkaart kopen</string>
    <string name="ov_chipkaart_2_text_1">De OV&#8211;chipkaart kost 7,50 euro en is, afhankelijk van welk soort kaart u koopt, 4 of 5 jaargeldig.</string>
    <string name="ov_chipkaart_2_text_2">De persoonlijke OV&#8211;chipkaart kunt u online aanvragen of via een formulier dat u kunt afhalen bij NS loketten en Qbuzz servicepunten. Bij het online aanvragen heeft u een digitale pasfoto nodig en moet u beschikken over internetbankieren 0m met iDeal te kunnen betalen. Bij het aanvragen via een formulier heeft u alleen een pasfoto nodig. Na behandeling van uw aanvraag wordt uw OV&#8211;chipkaart naar u opgestuurd.</string>
    <string name="ov_chipkaart_2_text_3">De anonieme OV&#8211;chipkaart is te koop bij een verkoopautornaat, bij een NS—Ioket of bij een Obuzz servicepunt. Verkoopautomaten Zijn te vinden in sommige winkels (vaak tabakzaken en postkantoren). Op http://OV&#8211;chipkaart.nl kunt u zoeken naar een verkooppunt bij u in de buurt.</string>
    <string name="ov_chipkaart_3_title">3. Voldoende saldo op uw kaart</string>
    <string name="ov_chipkaart_3_text_1">Om te kunnen reizen met uw OV—chipkaart rnoet er genoeg saldo op uw kaart staan. U kunt geld op uw kaart zetten (opwaarderen) bij oplaadautomaten. Bij een oplaadpunt betaalt u met een bankpas. U vindt oplaadautomaten in supermarkten, bij stations en boekhandels zoals Primera en Bruna. U kunt ook kiezen voor automatisch opladen. U geeft de bank opdracht om automatisch geld op uw OV&#8211;chipkaart te zetten als het saldo minder is dan 5. Zo staat er altijd genoeg geld op uw OV&#8211;chipkaart. Automatisch opladen kunt u aanvragen via internet of met een formulier.</string>
    <string name="ov_chipkaart_4_title">4. OV&#8211;chipkaart in de bus</string>
    <string name="ov_chipkaart_4_subtitle_1">In- en uitchecken</string>
    <string name="ov_chipkaart_4_subtitle_2">Overstappen</string>
    <string name="ov_chipkaart_4_text_1">In de bus staat bij iedere ingang en uitgang een kaartlezer. U houdt de kaart voor de lezer om in te checken. Aan het einde van de reis houdt u uw de kaart voor de kaartlezer bij de uitgang om uit te checken. Er wordt dan berekend van waar naar waar u heeft gereisd, en de kosten voor die reis worden vervolgens automatisch van uw OV&#8211;chipkaart saldo afgeschreven.</string>
    <string name="ov_chipkaart_4_text_2">De persoonlijke OV&#8211;chipkaart kunt u online aanvragen of via een formulier dat u kunt afhalen bij NS loketten en Qbuzz servicepunten. Bij het online aanvragen heeft u een digitale pasfoto nodig en moet u beschikken over internetbankieren 0m met iDeal te kunnen betalen. Bij het aanvragen via een formulier heeft u alleen een pasfoto nodig. Na behandeling van uw aanvraag wordt uw OV&#8211;chipkaart naar u opgestuurd.</string>
    <string name="ov_chipkaart_5_title">5. OV&#8211;chipkaart in de trein</string>
    <string name="ov_chipkaart_5_subtitle_1">In- en uitchecken</string>
    <string name="ov_chipkaart_5_subtitle_2">Kaartcontrole in de trein</string>
    <string name="ov_chipkaart_5_subtitle_3">Overstappen</string>
    <string name="bus_1_title">1. Busreis plannen</string>
    <string name="bus_1_subtitle_1">Voordat u op reis gaat is het handig om een aantal dingen te weten:</string>
    <string name="bus_1_text_1">1. Van welke adres vertrekt u?\n2. Waar is de bushalte?\n3. Wat is uw bestemming?\n4. Op welke datum wilt u reizen?\n5. hoelaat wilt u vertrekken (of aankomen)?\n</string>
    <string name="bus_1_text_2">Met deze gegevens kunt u uw reis gaan plannen. Er zijn drie manieren om uw reis te plannen en/of reistijden te achterhalen.</string>
    <string name="bus_1_text_3">1. Via het internet</string>
    <string name="bus_1_text_4">2. Telefonisch</string>
    <string name="bus_1_text_5">3. Bij de bushalte</string>
    <string name="bus_2_title">2. Busreis betalen</string>
    <string name="bus_2_subtitle_1">Er zijn 2 manieren om uw busreis te betalen:</string>
    <string name="bus_2_subtitle_2">Eurokaartjes</string>
    <string name="bus_2_subtitle_3">De OV&#8211;chipkaart</string>
    <string name="bus_2_text_1">1. Eurokaartje</string>
    <string name="bus_2_text_1_1">2. De OV&#8211;chipkaart</string>
    <string name="bus_2_text_2">Reist u maar af en toe met de bus? Dan kunt u in de bus bij de chauffeur een kaartje kopen. U betaalt met contant geld. Welk kaartje u nodig hebt, hangt af van de afstand die u reist. De chauffeur weet welk kaartje u nodig hebt, als u vertelt als u vertelt waar u heen moet. Een kaartje kost 2,5 of 8 euro. Er is ook een dagkaart voor 16 euro of een dal-dagkaart voor 10 euro.</string>
    <string name="bus_3_title">3. Bij de bushalte</string>
    <string name="bus_3_subtitle_1">Naar de bushalte</string>
    <string name="bus_3_subtitle_2">Instappen</string>
    <string name="bus_3_text_1">We raden u aan om ongeveer 5 minuten voor vertrek bij de bushalte te zijn. Op het gele haltebord staan de lijnen die vanaf de halte vertrekken. [plaatje] Onder het haltebord of in het bushokje hangt een overzicht van de vertrektijden van de bus.</string>
    <string name="bus_3_text_2">Voorop de bus staan het lijnnummer en de plaats waar de bus heen gaat. Daaraan ziet u welke bus u moet hebben.</string>
    <string name="bus_3_text_3">Als de bus waarmee u wilt reizen eraan komt steek dan uw hand op. De chauffeur weet dan zeker dat u mee wilt.</string>
    <string name="bus_3_text_4">Houd bij het instappen uw OV&#8211;chipkaart voor de kaartlezer. Heeft u geen OV&#8211;chipkaart? Koop dan een kaartje bij de chauffeur.</string>
    <string name="bus_4_title">4. De busreis</string>
    <string name="bus_4_subtitle_1">Overstappen</string>
    <string name="bus_4_subtitle_2">Reisinformatie op de schermen</string>
    <string name="bus_4_subtitle_3">Uitstappen</string>
    <string name="bus_4_text_1">Moet u overstappen op een andere bus? Zeg het tegen de chauffeur, zodat hij de chauffeur van de bus die u moet hebben kan waarschuwen.</string>
    <string name="bus_4_text_2">Op de schermen in de bus kunt u de namen van de haltes zien waar de bus als eerste Langskomt. Zo kunt u zien wanneer uw uitstaphalte komt. De haltenamen worden ook omgeroepen.</string>
    <string name="bus_4_text_3">In de bussen die naar een treinstation rijden, kunt u op de schermen ook lezen hoe laat de eerstvolgende treinen vertrekken.</string>
    <string name="bus_4_text_4">Druk op tijd op de stopknop als u er bij de eerstvolgende halte uit moet. Reist u met de OV&#8211;chipkaart, houdt uw kaart dan bij de hand. Bij het uitstappen houdt u uw OV&#8211;chipkaart voor de kaartlezer om uit te checken.</string>
    <string name="train_menu_text2">Op het station</string>
    <string name="train_2_title">2. Op het station</string>
    <string name="train_tut_2_subtitle_1">Reisinformatie</string>
    <string name="train_tut_2_subtitle_2">Welke trein gaat van welk perron?</string>
    <string name="train_tut_2_subtitle_3">Informatieloketten</string>
    <string name="train_tut_2_text_1">Ook op het station kunt u actuele reisinformatie vinden. Op het station staan borden geplaatst met overzichten van wanneer treinen rijden en waarnaartoe.</string>
    <string name="train_tut_2_text_2">Boven het perron hangen borden die aangeven wat de eerstvolgende trein is die van dat perron vertrekt, hoe laat die vertrekt en waar die naartoe zal rijden.</string>
    <string name="train_tut_2_text_3">Als u ergens vragen over heeft, kunt u altijd terecht bij een NS informatieloket. Deze zijn op ieder station te vinden.</string>
    <string name="train_tut_3_subtitle_2">Kaartjesautomaat gebruiken</string>
    <string name="train_4_title">4. De treinreis</string>
    <string name="train_tut_4_text_1">Nadat u bent ingecheckt of nadat u een kaartje heeft gekocht, bent u klaar om de train in te gaan. Als u uw reis al heeft gepland, weet u al van welk perron uw trein gaat. U kunt dan simpelweg naar dat perron lopen en de trein in stappen. Kijk voor de zekerheid wel even op de borden die boven het perron hangen of u hier daadwerkelijk in de juiste trein kunt stappen.</string>
    <string name="train_tut_4_text_2">Als u nog niet weet van welk perron uw trein gaat, kunt u een informatiebord opzoeken op het station, iemand van uw vervoerder (bijvoorbeeld NS ofArriva) aanspreken, of bijvoorbeeld een NS informatieloket opzoekenen daar vragen om meer informatie.</string>
    <string name="train_tut_4_text_3">Als u tijdens uw treinreis moet overstappen, hoeft u daarbij niet uit en in te checken. U hoeft pas uit te checken als u op uw eindbestemming bent aangekomen.</string>
</resources>