<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideInset">
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >


	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/train_4_title"
	        android:textSize="20sp"
	        android:textStyle="bold" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:text="@string/train_tut_4_text_2"
	        android:textSize="15sp"
	        android:paddingBottom="40dp"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/train_menu_text2"
	        android:textSize="15sp"
	        android:textStyle="bold" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:text="@string/train_tut_4_text_1"
	        android:textSize="15sp"/>
	    
	    <ImageView 
	        android:layout_width="fill_parent"
	        android:layout_height="180dp"
	        android:rotation="-90"
	        android:src="@drawable/train_tut_img2"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/train_tut_3_subtitle_2"
	        android:textSize="15sp"
	        android:textStyle="bold" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:text="@string/train_tut_4_text_2"
	        android:textSize="15sp"/>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:text="@string/train_tut_4_text_3"
	        android:textSize="15sp"/>
	    
	    
	    </LinearLayout>
</ScrollView>