<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideInset">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ov_chipkaart_4_title"
            android:textSize="20sp"
            android:textStyle="bold" />
	
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="dp"
            android:text="@string/ov_chipkaart_4_subtitle_1"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingTop="20dp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/ov_chipkaart_4_text_1"
            android:textSize="15sp" />
        
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:src="@drawable/ovchipkaartindebus" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="dp"
            android:text="@string/ov_chipkaart_4_subtitle_2"
           android:textSize="15sp"
            android:textStyle="bold"
            android:paddingTop="20dp" />
	
            

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/ov_chipkaart_4_text_2"
           android:textSize="15sp" />
           </LinearLayout>
    
</ScrollView>
