<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideInset" >
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus_2_title"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/bus_2_subtitle_1"
            android:textSize="15dp" />
		
		<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >
        
        <TextView 
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/bus_2_text_1"
        android:paddingLeft="20dp"
        android:textSize="15dp"/>
        
        <ImageButton 
			android:src="@drawable/information"
			android:id="@+id/bus_dialog_internet"
			android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:adjustViewBounds="true"
        	android:scaleType="centerInside"
        	android:gravity="left"
        	android:onClick="eurokaartjeDialog"
            />
    </LinearLayout>
    
     <LinearLayout 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingTop="10dp">
     
	     <TextView 
	     android:layout_width="180dp"
	     android:layout_height="wrap_content"
	     android:text="@string/bus_2_text_1_1"
	     android:paddingLeft="20dp"
	     android:textSize="15dp"/>
	     
		<ImageButton 
		android:src="@drawable/information"
		android:id="@+id/bus_dialog_internet"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#00FFFFFF"
	    android:adjustViewBounds="true"
	    android:scaleType="centerInside"
	    android:gravity="left"
	    android:onClick="ovchipkaartDialog"/>
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/bus_2_subtitle_2"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/bus_2_text_2"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:rotation="-90"
            android:src="@drawable/bus_tut_img1_with_play"
            android:onClick="playVideo" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/bus_2_subtitle_3"
            android:textSize="15dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/ov_chipkaart_1_text_1"
            android:textSize="15dp" />
        

    </LinearLayout>
    
</ScrollView>
