<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideInset">
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">    

    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bus_1_title"
        android:textSize="20dp"
        android:textStyle="bold"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bus_1_subtitle_1"
        android:textSize="15dp"
        android:textStyle="bold"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:lineSpacingExtra="3dp"
		android:maxLines="5"
		android:textSize="15dp"
        android:text="@string/bus_1_text_1"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/bus_1_text_2"
        android:textSize="15dp"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >
        
        <TextView 
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/bus_1_text_3"
        android:paddingLeft="20dp"
        android:textSize="15dp"/>
        
        <ImageButton 
			android:src="@drawable/information"
			android:id="@+id/bus_dialog_internet"
			android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:adjustViewBounds="true"
        	android:scaleType="centerInside"
        	android:gravity="left"
        	android:onClick="internetDialog"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >
        
        <TextView 
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/bus_1_text_4"
        android:paddingLeft="20dp"
        android:textSize="15dp"/>
        
        <ImageButton 
            android:src="@drawable/information"
            android:id="@+id/bus_dialog_telefonisch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:adjustViewBounds="true"
        	android:scaleType="centerInside"
        	android:gravity="right"
        	android:onClick="telephoneDialog" 
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        >
        
        <TextView 
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/bus_1_text_5"
        android:paddingLeft="20dp"
        android:textSize="15dp"/>
        
        <ImageButton 
            android:src="@drawable/information"
            android:id="@+id/bus_dialog_bushalte"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:adjustViewBounds="true"
        	android:scaleType="centerInside"
        	android:gravity="right"
        	android:onClick="bushalteDialog" 
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>